﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version 1.0.?.? (???) ????-??-??
	General description:
		This release has several breaking changes. Therefore, the old release can not be swapped with this 
		release, without a recompilation. Users should not expect any behavior changes and source code won't 
		have to be changed.

	Bugfixes:
		-RequiresValidator didn't generate correct exception messages.
		 When the exception message didn't contain additional information, the 'condition' was used, but
		 wasn't concatenated with a dot. This resulted in a sentence without a dot.
		 
		-Several string methods threw an exception with an invalid exception message.
		 Methods 'StartsWith', 'DoesNotStartWith', 'Contains', 'DoesNotContain', 'EndsWith' and 
		 'DoesNotEndWith' threw an exception message like this: 
			"value does not contain {'h', 'e', 'l', 'l', 'o'}"
		 The message should have been formed as follows:
			"value does not contain 'hello'"
	
	Code changes:
		-[BREAKING CHANGE] The public Validator<T>.ArgumentName field is changed to a readonly property.
		 This property was designed as field to ensure the best performance. However, the value is exclusively
		 used in exceptional cases (when exceptions are thrown). Therefore, violating the Framework Design
		 Guidelines wasn't a valid excuse.
		 
		-Extra 'IsTrue' and 'IsFalse' methods added according to work item 7143.
		 These method overloads allow validating Boolean and Nullable<Boolean> values.
		 see http://www.codeplex.com/conditions/WorkItem/View.aspx?WorkItemId=7143 for this work item.		 
		 
		-Extra method overloads added for most primitive CLR types to increase performance.
		 Method overloads for Byte, DateTime, Decimal, Double, Int16, Int32, Int64 and Single added for the
		 methods in the 'Compare' group. You could expect a 50% performance improvement on average, when
		 the new overloads are used (no code has to be changed, just recompile).
		 